--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,21 @@
   }
 
 
+  .btn {
+    border-radius: 10px !important;
+    font-size: 16px !important;
+    font-weight: 600 !important;
+    text-transform: uppercase !important;
+    border: none;    
+
+}
+
+.btn-primary {
+  background-color: #9b70ff!important
+}
+
+
+
   .footer {
     position:absolute;
     bottom:0;
