--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,7 @@
   --background-Color: hsl(61, 80%, 66%);
   --smoky-black: hsla(61, 37%, 68%, 0.875);
   --white-1: hsl(0, 0%, 100%);
-  --white-2: hsl(0, 0%, 98%);
-  --hot-pink: hsl(330, 100%, 71%);
+  --light-blue: hsl(211, 100%, 69%);
   --light-gray: hsl(0, 33%, 97%);
   --main-purple: hsl(274, 63%, 72%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
@@ -118,11 +117,11 @@ input, textarea {
 }
 
 ::selection {
-  background: var(--hot-pink);
+  background: var(--light-blue);
   color: var(--smoky-black);
 }
 
-:focus { outline-color: var(--hot-pink); }
+:focus { outline-color: var(--light-blue); }
 
 html { font-family: var(--ff-poppins); }
 
@@ -163,7 +162,7 @@ article {
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  color: var(--hot-pink);
+  color: var(--light-blue);
   box-shadow: var(--shadow-1);
   z-index: 1;
 }
@@ -192,7 +191,7 @@ article.active {
 }
 
 .p1{
-  color: var(--white-2);
+  color: var(--white-1);
 
 }
 
@@ -200,7 +199,7 @@ article.active {
 .h3,
 .h4,
 .h5 {
-  color: var(--white-2);
+  color: var(--white-1);
   text-transform: capitalize;
 }
 
@@ -230,7 +229,7 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar-thumb {
-  background: var(--hot-pink);
+  background: var(--light-blue);
   border-radius: 5px;
 }
 
@@ -314,7 +313,7 @@ main {
 .navbar-link:hover,
 .navbar-link:focus { color: var(--light-gray-70); }
 
-.navbar-link.active { color: var(--hot-pink); }
+.navbar-link.active { color: var(--light-blue); }
 
 
 
@@ -543,7 +542,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--white-2);
+  color: var(--white-1);
   font-size: 18px;
   opacity: 0.7;
 }
@@ -698,7 +697,7 @@ main {
   --scale: 0.8;
 
   background: var(--jet);
-  color: var(--hot-pink);
+  color: var(--light-blue);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -731,7 +730,7 @@ main {
 .project-category { margin-left: 10px; }
 
 .project-title {
-  color: var(--white-2);
+  color: var(--white-1);
   font-size: var(--fs-5);
   font-weight: var(--fw-400);
   text-transform: capitalize;
