--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,9 +82,6 @@
 }
 
 
-
-
-
 /*-----------------------------------*\
   #RESET
 \*-----------------------------------*/
@@ -1221,7 +1218,31 @@ main {
 }
 
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+.dropdown-content {
+  display: none;
+  position: relative;
+  min-width: 160px;
+  padding: 0px 16px;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  background: hsla(240, 1%, 17%, 0.75);
+  backdrop-filter: blur(10px);
+  border: 1px solid var(--jet);
+  border-radius: 12px 0 12px 12px;
+  box-shadow: var(--shadow-2);
+  top: 64px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
   /**
    * Privacy
